--- a/build.gradle
+++ b/build.gradle
@@ -34,6 +34,10 @@ tasks.withType(JavaCompile) {
 		
 		compile group: 'log4j', name: 'log4j', version: '1.2.17'
 		
+		compile group: 'org.apache.logging.log4j', name: 'log4j-slf4j-impl', version: '2.7'
+
+		compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.7'
+		
 		compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.21'
 		
 		compile group: 'org.springframework', name: 'spring-context', version: '4.3.3.RELEASE'
@@ -60,11 +64,35 @@ tasks.withType(JavaCompile) {
 		
 		compile group: 'commons-beanutils', name: 'commons-beanutils', version: '1.9.3'
 		
-		compile group: 'redis.clients', name: 'jedis', version: '2.9.0'
+		compile group: 'redis.clients', name: 'jedis', version: '2.8.1'
 		
 		compile group: 'javax.mail', name: 'mail', version: '1.5.0-b01'
 	
 		compile group: 'javax.mail', name: 'javax.mail-api', version: '1.5.6'
+		
+		compile group: 'cglib', name: 'cglib', version: '3.2.4'
+		
+		compile group: 'dom4j', name: 'dom4j', version: '1.6.1'
+		
+		compile group: 'org.apache.commons', name: 'commons-digester3', version: '3.2'
+		
+		compile group: 'de.odysseus.staxon', name: 'staxon', version: '1.3'
+
+		compile group: 'org.apache.curator', name: 'curator-framework', version: '3.2.1'
+
+		compile group: 'org.springframework.session', name: 'spring-session', version: '1.2.2.RELEASE'
+		
+		compile group: 'org.springframework.data', name: 'spring-data-redis', version: '1.7.5.RELEASE'
+		
+		compile group: 'org.apache.commons', name: 'commons-pool2', version: '2.4.2'
+		
+		compile group: 'org.springframework', name: 'spring-web', version: '4.3.4.RELEASE'
+		
+		compile group: 'org.apache.zookeeper', name: 'zookeeper', version: '3.4.9'
+		
+		
+		
+		
 		
 	}
 }
