--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@
 jdbc.driverMysql=com.mysql.jdbc.Driver
 jdbc.driverOracle=oracle.jdbc.driver.OracleDriver
 
-jdbc.url_mysql=jdbc\:mysql\://10.2.1.205\:3306/material?useUnicode\=true&characterEncoding\=utf-8
+jdbc.url_mysql=jdbc\:mysql\://192.168.177.128\:3306/basic?useUnicode\=true&characterEncoding\=UTF-8
 jdbc.url_oracle =jdbc\:oracle\:thin\:\@10.2.1.204\:1521\:center
 
 jdbc.mysql_username=manager
