--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,7 @@ jar {
 }
 
 repositories {
+	maven{ url 'http://maven.aliyun.com/nexus/content/groups/public'}
 	mavenLocal()
     mavenCentral()
 }
@@ -55,7 +56,7 @@ tasks.withType(JavaCompile) {
 		compile group: 'org.springframework', name: 'spring-web', version: '4.3.4.RELEASE'
 
 		
-		compile group: 'com.alibaba', name: 'druid', version: '1.0.26'
+		compile group: 'com.alibaba', name: 'druid', version: '1.0.28'
 
 		compile group: 'com.google.code.gson', name: 'gson', version: '2.7'
 		
