--- a/build.gradle
+++ b/build.gradle
@@ -94,9 +94,12 @@ tasks.withType(JavaCompile) {
 		
 		compile group: 'org.apache.poi', name: 'poi', version: '3.16'
 		
+		compile group: 'org.springframework.data', name: 'spring-data-mongodb', version: '1.10.4.RELEASE'
 		
+		compile group: 'org.springframework.boot', name: 'spring-boot', version: '1.5.3.RELEASE'
 		
-		
+		compile group: 'org.springframework.boot', name: 'spring-boot-autoconfigure', version: '1.5.3.RELEASE'
+
 		
 	}
 }
