--- a/build.gradle
+++ b/build.gradle
@@ -92,7 +92,9 @@ tasks.withType(JavaCompile) {
 		
 		compile group: 'org.apache.curator', name: 'curator-framework', version: '3.3.0'
 		
-		compile group: 'org.apache.poi', name: 'poi', version: '3.16'
+		compile group: 'org.apache.poi', name: 'poi', version: '3.17'
+		
+    	compile group: 'org.apache.poi', name: 'poi-ooxml', version: '3.17'
 		
 		compile group: 'org.springframework.data', name: 'spring-data-mongodb', version: '1.10.4.RELEASE'
 		
